modules/application/_user-api/ecs_service.tf
resource "aws_service_discovery_service" "user_api_service" {
  name = "_user.api"

  dns_config {
    namespace_id = var.lookcardlocal_namespace

    dns_records {
      ttl  = 10
      type = "A"
    }
  }

  health_check_custom_config {
    failure_threshold = 1
  }
}

resource "aws_ecs_service" "users" {
  name            = local.application.name
  task_definition = aws_ecs_task_definition.user_api.arn
  launch_type     = "FARGATE"
  desired_count   = 1
  cluster         = var.cluster

  network_configuration {
    subnets         = var.network.private_subnet
    security_groups = [aws_security_group.user_api.id]
  }

  load_balancer {
    target_group_arn = aws_lb_target_group.users_target_group.arn
    container_name   = local.application.name
    container_port   = local.application.port
  }

  service_registries {
    registry_arn = aws_service_discovery_service.user_api_service.arn
  }
}


resource "aws_lb_target_group" "users_target_group" {
  name        = "Users"
  port        = 80
  protocol    = "HTTP"
  vpc_id      = var.network.vpc
  target_type = "ip"
}

resource "aws_lb_listener_rule" "users_listener_rule" {
  listener_arn = var.default_listener

  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.users_target_group.arn
  }

  condition {
    path_pattern {
      values = local.load_balancer.api_path
    }
  }

  priority = local.load_balancer.priority
  tags = {
    Name = "Users-listener-rule"
  }
}
